--- a/contact.css
+++ b/contact.css
@@ -9,7 +9,7 @@
 body{
   min-height: 100vh;
   width: 100%;
-  background:url(pic/download.jpg);
+  background:url(download.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
