--- a/home.css
+++ b/home.css
@@ -211,5 +211,62 @@ ul li a:hover{
     transform: translate(-50%, -50%);
     z-index: 9999;
 }
+@media only screen and (max-width: 768px) {
+    .navbar {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .logo {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+  
+    ul {
+      text-align: center;
+      margin-top: 0;
+    }
+  
+    ul li {
+      display: block;
+      padding: 8px 0;
+    }
+  
+    .main {}
+      padding: 0 10px;
+    }
+  
+    .info {
+     
+      margin-left: 0;
+      margin-top: 20px;
+    }
+  
+    .openinghours {
+      
+      width: 100%;
+      margin-left: 0;
+    }
+  
+    .openinghourscontent {
+      
+      width: 100%;
+    }
+  
+    .image {
+      
+      display: none;
+    }
+  
+    .advertising-video {
+      
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+
 
 
