--- a/videos.css
+++ b/videos.css
@@ -43,3 +43,26 @@ body {
 .text h2 a{
     color:aquamarine
 }
+@media only screen and (max-width: 768px) {
+.text {
+    width: 90%; /* Adjust text width to fit smaller screens */
+    padding: 10px; /* Adjust padding for better spacing on smaller screens */
+    overflow-y: auto; /* Enable vertical scroll if needed */
+  }
+  
+  .text h2 {
+    font-size: 20px; /* Decrease font size for smaller screens */
+    margin-bottom: 8px; /* Adjust margins for better spacing on smaller screens */
+  }
+  
+  .text h4 {
+    font-size: 14px; /* Decrease font size for smaller screens */
+    margin-top: 20px; /* Adjust margins for better spacing on smaller screens */
+    margin-bottom: 15px; /* Adjust margins for better spacing on smaller screens */
+  }
+  
+  .text p {
+    font-size: 16px; /* Decrease font size for smaller screens */
+    line-height: 22px; /* Adjust line height for better readability on smaller screens */
+  }
+}
