--- a/home.css
+++ b/home.css
@@ -243,17 +243,6 @@ ul li a:hover{
       margin-top: 20px;
     }
   
-    .openinghours {
-      
-      width: 100%;
-      margin-left: 0;
-    }
-  
-    .openinghourscontent {
-      
-      width: 100%;
-    }
-  
     .image {
       
       display: none;
@@ -263,11 +252,14 @@ ul li a:hover{
       
       width: 100%;
       margin-left: 0;
+      box-sizing: border-box; /* Ensures padding and borders are included in the width */
+  padding: 10px;
     }
   
     .openinghourscontent {
       
       width: 100%;
+        box-sizing: border-box;
     }
 
 .advertising-video {
